--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,11 @@ build/
 
 ### VS Code ###
 .vscode/
+**/node_modules/
+
+### Local env files ###
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
